# news-digest-assistant

./: .gitignore  README.md  crontab_setup.txt  fetcher.py  pyproject.toml  run_fetcher.sh  server.py  start_dashboard.sh
briefings/.obsidian/: workspace.json
briefings/news/.obsidian/: workspace.json
templates/: index.html
